; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_libata-core.c_ata_sg_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_libata-core.c_ata_sg_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_queued_cmd = type { i32, %struct.scatterlist*, %struct.scatterlist* }
%struct.scatterlist = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ata_sg_init(%struct.ata_queued_cmd* %0, %struct.scatterlist* %1, i32 %2) #0 {
  %4 = alloca %struct.ata_queued_cmd*, align 8
  %5 = alloca %struct.scatterlist*, align 8
  %6 = alloca i32, align 4
  store %struct.ata_queued_cmd* %0, %struct.ata_queued_cmd** %4, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %8 = load %struct.ata_queued_cmd*, %struct.ata_queued_cmd** %4, align 8
  %9 = getelementptr inbounds %struct.ata_queued_cmd, %struct.ata_queued_cmd* %8, i32 0, i32 1
  store %struct.scatterlist* %7, %struct.scatterlist** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.ata_queued_cmd*, %struct.ata_queued_cmd** %4, align 8
  %12 = getelementptr inbounds %struct.ata_queued_cmd, %struct.ata_queued_cmd* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = load %struct.ata_queued_cmd*, %struct.ata_queued_cmd** %4, align 8
  %14 = getelementptr inbounds %struct.ata_queued_cmd, %struct.ata_queued_cmd* %13, i32 0, i32 1
  %15 = load %struct.scatterlist*, %struct.scatterlist** %14, align 8
  %16 = load %struct.ata_queued_cmd*, %struct.ata_queued_cmd** %4, align 8
  %17 = getelementptr inbounds %struct.ata_queued_cmd, %struct.ata_queued_cmd* %16, i32 0, i32 2
  store %struct.scatterlist* %15, %struct.scatterlist** %17, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
